--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ html {
   /* Setting a base font size of 10px give us easier rem calculations
      Info: 1rem === 10px, 1.5rem === 15px, 2rem === 20px and so forth
    */
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 15px;
 }
 
